<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">OneNET RESTful SDK</string>
    <string name="apikey_edit_text_hint">This is your product apikey</string>
    <string name="apikey_edit_text_error">Apikey can not be empty!</string>
    <string name="device">Device</string>
    <string name="device_id">Device ID</string>
    <string name="trigger">Trigger</string>
    <string name="debug_online">Debug online</string>
    <string name="add_device">Add device</string>
    <string name="add_device_title_hint">Device name</string>
    <string name="add_device_auth_info_hint">Auth info</string>
    <string name="add_device_dtu_number_hint">DTU serial number</string>
    <string name="add_device_dtu_password_hint">DTU password</string>
    <string name="add_device_model_hint">Device model</string>
    <string name="add_device_id_hint">Device ID</string>
    <string name="radio_private">Private</string>
    <string name="radio_public">Public</string>
    <string name="device_access_protocol">Device access protocol</string>
    <string name="data_confidentiality">Data confidentiality</string>
    <string name="device_title_empty_error">Device name can not be empty!</string>
    <string name="auth_info_empty_error">Auth info can not be empty!</string>
    <string name="dtu_serial_number_empty_error">DTU serial number can not be empty!</string>
    <string name="dtu_password_empty_error">DTU password can not be empty!</string>
    <string name="device_model_empty_drror">Device model can not be empty!</string>
    <string name="device_id_empty_error">Device ID can not be empty!</string>
    <string name="edit_apikey">Edit AppKey</string>
    <string name="edit_device">Edit device</string>
    <string name="delete_device">Delete device</string>
    <string name="send_command">Send command</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="delete_device_dialog_content">Are you sure to delete the device ?</string>
    <string name="send_cmd_activity_title">Send command with <xliff:g id="PROTOCOL">%s</xliff:g></string>
    <string name="command_content">Command content</string>
    <string name="need_resp">Need response</string>
    <string name="no_need_resp">No need response</string>
    <string name="valid_period">Valid period (s)</string>
    <string name="send_cmd_succ">Send command success</string>
    <string name="data_simulator">Data simulator</string>
    <string name="map_simulator">Map simulator</string>
    <string name="api_debug_tool">API debug tool</string>
    <string name="datastream">Data stream</string>
    <string name="data_range">Data range</string>
    <string name="time_interval">Period (s)</string>
    <string name="min_value">Min value</string>
    <string name="max_value">Max value</string>
    <string name="send_onece">Send onece</string>
    <string name="send_continuous">Send continuous</string>
    <string name="stop_sending">Stop sending</string>
    <string name="api_url">Api Url</string>
    <string name="request_method">Request method</string>
    <string name="request_params">Request params</string>
    <string name="add_request_params">Add</string>
    <string name="clear_request_params">Clear</string>
    <string name="request_content">Request content</string>
    <string name="send_request">Send request</string>
    <string name="param_name">Param name</string>
    <string name="param_value">Param value</string>
    <string name="pick_location">Pick location</string>
    <string name="rationale_message_amap">The map function may not work properly as the necessary permissions are missing</string>
    <string name="locating">Locating...</string>
    <string name="add_datastream">Add datastream</string>
    <string name="ds_id">DataStream ID</string>
    <string name="ds_unit_name">Unit name</string>
    <string name="ds_unit_symbol">Unit symbol</string>
    <string name="added_successfully">Added successfully</string>
    <string name="create_time">Create time</string>
    <string name="url_address">URL address</string>
    <string name="latest_data">Latest data</string>
    <string name="update_time">Update time</string>
    <string name="no_data">No data</string>
    <string name="modified_successfully">Modified successfully</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="param_name_empty_error">Parameter name cannot be empty</string>
    <string name="param_value_empty_error">Parameter value cannot be empty</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="query_single_device">Query single device</string>
    <string name="fuzzy_query_devices">Fuzzy query devices</string>
    <string name="update_datastream">Update datastream</string>
    <string name="query_single_datastream">Query single datastream</string>
    <string name="query_multi_datastreams">Query multi datastream</string>
    <string name="delete_datastream">Delete datastream</string>
    <string name="add_datapoint">Add datapoint</string>
    <string name="query_datapoints">Query datapoint</string>
    <string name="add_trigger">Add trigger</string>
    <string name="update_trigger">Update trigger</string>
    <string name="query_single_trigger">Query single trigger</string>
    <string name="fuzzy_query_triggers">Fuzzy query triggers</string>
    <string name="delete_trigger">Delete trigger</string>
    <string name="add_binary_data">Add binary data</string>
    <string name="query_binary_data">Query binary data</string>
    <string name="query_cmd_status">Query command status</string>
    <string name="query_cmd_resp">Query command response</string>
    <string name="api_resp_log">Api response log</string>
    <string name="api_test">Api test</string>
    <string name="trigger_id">Trigger ID</string>
    <string name="binary_data_index">Binary data index</string>
    <string name="cmd_uuid">Command UUID</string>
    <string name="datapoint">Data point</string>
    <string name="binary_data">Binary data</string>
    <string name="command">Command</string>
    <string name="send_cmd_by_topic">Send command by topic</string>
    <string name="query_devices_by_topic">Query devices by topic</string>
    <string name="query_device_topics">Query device topics</string>
    <string name="add_product_topic">Add product topic</string>
    <string name="delete_product_topic">Delete product topic</string>
    <string name="query_product_topics">Query product topics</string>
    <string name="add_api_key">Add api key</string>
    <string name="update_api_key">Update api key</string>
    <string name="query_api_keys">Query api keys</string>
    <string name="delete_api_key">Delete api key</string>
</resources>
