<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/device"
            android:icon="@drawable/ic_devices"
            android:title="@string/device"/>

        <item
            android:id="@+id/trigger"
            android:icon="@drawable/ic_trigger"
            android:title="@string/trigger"/>

        <item
            android:id="@+id/debug_online"
            android:icon="@drawable/ic_debug_tools"
            android:title="@string/debug_online"/>

        <item
            android:id="@+id/api_test"
            android:icon="@drawable/ic_api_test"
            android:title="@string/api_test"/>

    </group>

    <group android:id="@+id/group2">

        <item
            android:id="@+id/edit_apikey"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit_apikey"/>

    </group>

</menu>