<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.chinamobile.iot.onenet.sdksample.view.TextInputContainer
            android:id="@+id/api_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/api_url"
                android:inputType="textUri"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorHint"
                android:textSize="14sp"/>

        </com.chinamobile.iot.onenet.sdksample.view.TextInputContainer>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/request_method"
            android:textColor="@color/textColorSecondary"
            android:textSize="14sp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/request_method_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:entries="@array/request_method"
            android:spinnerMode="dropdown"
            app:theme="@style/SpinnerStyle">

        </android.support.v7.widget.AppCompatSpinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/request_params"
            android:textColor="@color/textColorSecondary"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/request_params"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/textColorSecondary"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/add_request_params"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/clear_request_params"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"/>

        </LinearLayout>

        <com.chinamobile.iot.onenet.sdksample.view.TextInputContainer
            android:id="@+id/request_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_content"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorHint"
                android:textSize="14sp"/>

        </com.chinamobile.iot.onenet.sdksample.view.TextInputContainer>

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/send_request"
            android:textColor="@color/textColorPrimary"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/response_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/windowBackground"
            android:minHeight="120dp"
            android:padding="12dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="12sp"/>

    </LinearLayout>

</ScrollView>