<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.chinamobile.iot.onenet.sdksample.view.TextInputContainer
            android:id="@+id/device_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/device_id"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorHint"
                android:textSize="14sp"/>

        </com.chinamobile.iot.onenet.sdksample.view.TextInputContainer>

        <com.chinamobile.iot.onenet.sdksample.view.TextInputContainer
            android:id="@+id/datastream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/datastream"
                android:lines="1"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorHint"
                android:textSize="14sp"/>

        </com.chinamobile.iot.onenet.sdksample.view.TextInputContainer>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_range"
            android:textColor="@color/textColorSecondary"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.chinamobile.iot.onenet.sdksample.view.TextInputContainer
                android:id="@+id/min_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/min_value"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorHint"
                    android:textSize="14sp"/>

            </com.chinamobile.iot.onenet.sdksample.view.TextInputContainer>

            <com.chinamobile.iot.onenet.sdksample.view.TextInputContainer
                android:id="@+id/max_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/max_value"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorHint"
                    android:textSize="14sp"/>

            </com.chinamobile.iot.onenet.sdksample.view.TextInputContainer>

        </LinearLayout>

        <com.chinamobile.iot.onenet.sdksample.view.TextInputContainer
            android:id="@+id/period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_interval"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorHint"
                android:textSize="14sp"/>

        </com.chinamobile.iot.onenet.sdksample.view.TextInputContainer>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/send_onece"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/send_onece"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/send_continuous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/send_continuous"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/response_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/windowBackground"
            android:minHeight="120dp"
            android:padding="12dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="12sp"/>

    </LinearLayout>

</ScrollView>